Lesson 3 final commit

--- a/lesson3_VersionControl.git/index.html
+++ b/lesson3_VersionControl.git/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>INSERT YOUR NAME</title>
+    <title>John Michel</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>John Michel</h3>
             </div>
         </div>
     </header>
@@ -77,55 +77,63 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" img src="./version.png">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">What is a Version Control System?</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">A version control system is a system that records changes to a file ore set of files over time so that you can recall specific versions later. This serves for efficient file editing. The group that benefits the most from such a system are developers, especially those that are working in project teams. With this version control system, they can make edits to whatever project they are working on, without the hassle of losing or damaging files. It also allows you to revert back to previous states of editing, return to the original project, or compare changes that are happening in real-time. 
+</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" img src="./git.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">History of Git</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">The starting history of Git is actually quite interesting, although it was not thought to have such a prolific future by many, it still managed to prove critics wrong. The beginning of Git’s history started off pretty bumpy, with it first being a series of patches and archived files. It wasn’t until after 15 years from its starting point where it actually rendered a promising outlook. The Linux kernel has done a miraculous job innovating its features. The new system has a faster, simpler, and fully distributed software. The best part about it is that users can take full effect of its efficacy in managing larger projects.
+</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" img src="./local.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Local Version System</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">The local version control system is probably the most preferred by system users. This is the simple method of just copying files into another directory. The problem with this control system is that it is highly prone to error. The specified location of a directory is often forgotten, causing the wrong file to be copied or write to the wrong file. Developers have found a way to fix this problem by developing local VCSs that keep all the changes made to a file under revision control. They even come with most operating systems once the Developers tools are installed. Patches are the common method for these systems to re-create what any file looked ike by adding them up.
+</p>
         </div>
         
         <hr class="featurette-divider">
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" img src="./central.png">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">Centralized Version Control</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">To deal with most of the technical errors caused by Local Version Systems, the Centralized Version was created. This system revitalized the systems by allowing developers to collaborate with other systems. The focus of these systems are to store files that the clients have created into one central place. As a result, this single server became the standard for version control systems. As for many good things in technology, there was a downside. Since this files were stored on one server they were susceptible to system crashes and file corruption. The only real way to avoid this situation was by snapshots of the projects. This itself deemed it necessary to have an alternative or modified system
+</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" img src="./distributed.png">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">Distributed Version Control</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Lastly, we have the Distributed Version Control System. Probably the most sophisticated system of the all, this control system allowed for clients to automatically be able to trace the latest snapshot of their files. Why is this so important? The system automatically creates a clone of the file. This means that if their server dies, there will always be a mirror, or backup of the file. 
+
+What are some other benefits? Clients can simultaneously work together without effecting others work, as far as erasing or losing data. It is all working together. Once again, proving why it is the most efficient method.
+
+</p>
         </div>
 
         <hr class="featurette-divider">
